RESOLVED FIXED161881
Media-source backed elements block load event; cause web-platform-test flakiness
https://bugs.webkit.org/show_bug.cgi?id=161881
Summary Media-source backed elements block load event; cause web-platform-test flakiness
Jer Noble
Reported 2016-09-12 15:57:09 PDT
Media-source backed elements block load event; cause web-platform-test flakiness
Attachments
Patch (6.62 KB, patch)
2016-09-12 15:59 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2016-09-12 15:59:56 PDT
Eric Carlson
Comment 2 2016-09-13 08:44:21 PDT
Comment on attachment 288631 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=288631&action=review > Source/WebCore/Modules/mediasource/MediaSource.idl:51 > // FIXME: type should not be nullable. Nit: looks like you can remove this FIXME.
Jer Noble
Comment 3 2016-09-13 10:45:21 PDT
Note You need to log in before you can comment on or make changes to this bug.